# nrgljubljana_interface

./: .clang-tidy  .gitignore  .travis.yml  CMakeLists.txt  Dockerfile  Jenkinsfile  LICENSE.txt  README.md  refresh_nrgljubljana
.github/ISSUE_TEMPLATE/: bug.md
.github/workflows/: build.yml
c++/app4triqs/: container_set.hpp  solver_core.cpp  solver_core.hpp  types.hpp
c++/nrgljubljana_interface/: CMakeLists.txt  container_set.hpp  gen  openmp.hpp  params.cpp  params.hpp  post_process.cpp  post_process.hpp  solver_core.cpp  solver_core.hpp  types.hpp
c++/triqs/gfs/: hilbert_transform.hpp  hilbert_transform.tex
c++/triqs/gfs/meshes/: point_mesh.hpp  refreq_pts.hpp
c++/triqs/mesh/: point_mesh.hpp  refreq_pts.hpp
dmft/: README  hubbard.py
doc/: CMakeLists.txt  ChangeLog.md  about.rst  changelog.rst  conf.py.in  documentation.rst  index.rst  install.rst
doc/_templates/: sideb.html
doc/guide/: .gitignore  2orb-UJ.py  2orb-UJ.rst  2orb-UJ_plot.py  2orb-UJ_solution.h5  aim.py  aim_plot.py  aim_solution.h5  data.in  data.in_excerpt  defining_models.rst  gf_struct  holstein.py  holstein_plot.py  holstein_solution.h5  hubbard.py  hubbard.rst  hubbard_plot.py  info  instantiate  op.self_d2_0.3_-1.4  param  process  solution.h5
nrgljubljana/: CMakeLists.txt
nrgljubljana/c++/: CMakeLists.txt  nrg-lib.h
nrgljubljana/doc/: conf.py.in
nrgljubljana/doc/sphinxext/numpydoc/: docscrape.py  inheritance_diagram.py  plot_directive.py
packaging/: CMakeLists.txt  TRIQS-nrgljubljana_interface-3.0.0-foss-2019a-Python-3.7.2.eb  TRIQS-nrgljubljana_interface-3.1.0-foss-2021b.eb  TRIQS-nrgljubljana_interface-3.2.0-foss-2021b.eb  TRIQS-nrgljubljana_interface-foss-2021b.eb.in
packaging/conda/: meta.yaml  meta.yaml.in
python/nrgljubljana_interface/: .gitignore  CMakeLists.txt  __init__.py  descriptors.py  mesh_refreq_pts_desc.py  parameters_all_solve_params_t.rst  parameters_constr_params_t.rst  parameters_nrg_params_t.rst  parameters_solve_params_t.rst  post_process_desc.py  solver.py  solver_core_desc.py  version.py.in
share/: CMakeLists.txt  nrgljubljana_interface.modulefile.in  nrgljubljana_interfacevars.sh.in
share/cmake/: CMakeLists.txt  nrgljubljana_interface-config.cmake.in
templates/: CMakeLists.txt
templates/2orb-UJ/: .gitignore  2orb-UJ.m  data.in  ham.model..QS_-1.2  ham.model..QS_-2.3  ham.model..QS_0.1  ham.model..QS_0.3  ham.model..QS_1.2  ham.model..QS_1.4  ham.model..QS_2.1  ham_-2.1  ham_-3.2  ham_0.5  ham_2.3  ham_3.2  ham_4.1  instantiate  mmalog  op.n_d  op.n_d^2  ops  param  specd  specs  spect
templates/2orb-UJ/QS/: 2orb-UJ.m  chi_struct  data.in  discretize  ham_-1.2  ham_-1.4  ham_-2.1  ham_-2.3  ham_-3.2  ham_-4.1  ham_0.1  ham_0.3  ham_1.2  ham_1.4  ham_2.1  ham_2.3  ham_3.2  info  instantiate  instantiate.orig  mmalog  modeloperators.m  op.A_a_-1.4_-2.3  op.A_a_1.2_0.1  op.A_a_1.2_0.3  op.A_a_2.3_1.2  op.A_d  op.A_d1_-1.2_-2.3  op.A_d1_-3.2_-4.1  op.A_d1_0.3_-1.2  op.A_d1_0.3_-1.4  op.A_d1_0.5_-1.4  op.A_d1_1.4_0.3  op.A_d1_3.2_2.1  op.A_d2_-1.2_-2.1  op.A_d2_-1.2_-2.3  op.A_d2_-1.4_-2.3  op.A_d2_-2.1_-3.2  op.A_d2_1.4_0.5  op.A_d2_2.3_1.4  (+86 more)
templates/2orb-UJt/QS/: 2orb-UJt.m  data.in  discretize  ham_-1.2  ham_-1.4  ham_-2.1  ham_-2.3  ham_-3.2  ham_0.1  ham_0.3  ham_1.2  ham_1.4  ham_2.1  ham_2.3  ham_3.2  info  instantiate  modeloperators.m  op.A_d1  op.A_d1_-1.2_-2.1  op.A_d1_-2.1_-3.2  op.A_d1_-2.3_-3.2  op.A_d1_0.1_-1.2  op.A_d1_1.4_0.5  op.A_d1_2.1_1.2  op.A_d1_2.3_1.4  op.A_d1_3.2_2.3  op.A_d1_4.1_3.2  op.A_d2_-2.3_-3.2  op.A_d2_-3.2_-4.1  op.A_d2_0.1_-1.2  op.A_d2_0.3_-1.2  op.A_d2_0.3_-1.4  op.A_d2_1.2_0.3  op.A_d2_2.1_1.2  op.A_d2_2.3_1.2  op.A_d2_3.2_2.3  op.hop12  op.n_d1^2  op.n_d1n_d2  (+46 more)
templates/CLEAN/QS/: CLEAN.m  data.in  gf_struct  ham_1.1  info  op.A_f  op.A_f_1.1_0.2  op.n_f  op.n_f^2  op.sigma_f  param  process  wilson
templates/Holstein/Nph=10/QS/: Holstein.m  data.in  ham.model..QS_-1.2  ham.model..QS_-2.1  ham.model..QS_0.3  ham.model..QS_2.1  ham_0.1  ham_1.2  info  mmalog  op.A_d  op.A_d_-1.2_-2.1  op.A_d_0.1_-1.2  op.A_d_0.3_-1.2  op.A_d_1.2_0.1  op.A_d_1.2_0.3  op.A_d_2.1_1.2  op.aan  op.displ  op.displ^2  op.hop0  op.n_d  op.n_d^2  op.nph  op.self_d  op.self_d_-1.2_-2.1  op.self_d_0.1_-1.2  op.self_d_0.3_-1.2  op.self_d_1.2_0.1  op.self_d_1.2_0.3  op.self_d_2.1_1.2  op.sigma_d  ops  param  prepare  specs  spect
templates/SIAM/: data.in  discretize  ham.model..QS_-1.2  instantiate  prepare  process
templates/SIAM/QS/: Collect  SIAM.m  data.in  discretize  ham.model..QS_0.1  ham_1.2  info  instantiate  mmalog  op.hop0  op.n_d^2  op.self_d  op.self_d_0.1_-1.2  op.self_d_1.2_0.1  op.self_d_1.2_0.3  op.self_d_2.1_1.2  ops  param  prepare  process  specd  specs  wilson
templates/SIAM/QSZ/: SIAM.m  chi_struct  data.in  discretize  gf_struct  ham.model..QSZ_-1.0  ham.model..QSZ_-2.1  ham_-1.2  ham_0.-1  ham_0.1  ham_0.3  ham_1.0  ham_1.2  ham_2.1  info  instantiate  instantiate.diff  instantiate.old  mmalog  ni  op.A_d  op.A_d_0.1_-1.0  op.A_d_0.1_-1.2  op.A_d_0.3_-1.2  op.A_d_1.0_0.1  op.A_d_1.2_0.1  op.A_d_1.2_0.3  op.SZd  op.hop0  op.n_d  op.n_d^2  op.self_d  op.self_d_0.1_-1.0  op.self_d_0.1_-1.2  op.self_d_1.0_0.-1  op.self_d_1.0_0.1  op.self_d_1.2_0.1  op.self_d_1.2_0.3  op.self_d_2.1_1.0  op.self_d_2.1_1.2  (+7 more)
templates/generate_template/: SIAM.m  data.in  ham.model..QS_2.1  param
test/: .clang-tidy
test/c++/: CMakeLists.txt  hilbert_transform.cpp  hubbard.cpp  refreq_pts.cpp  siam.cpp  siam.ref.h5  solver_hdf5.cpp
test/python/: .gitignore  1_SIAM_QS.py  1_SIAM_QS.ref.h5  2_SIAM_QSZ.py  2_SIAM_QSZ.ref.h5  3_2orb-UJ_QS.py  3_2orb-UJ_QS.ref.h5  4_mesh_max=10.py  4_mesh_max=10.ref.h5  5_bandrescale.py  5_bandrescale.ref.h5  6_solver_h5io.py  7_solve_twice.py  8_solve_last.py  A_refreq_pts.py  CMakeLists.txt  Hubbard.py  MPI_SIAM_QS.py  MPI_SIAM_QS.ref.h5  SIAM.py  SIAM_QS.py  SIAM_QSZ.py
test/python/test1_siam/: test.py
tutorial/: README  plot.py  tutorial.ipynb
tutorial/1_AIM/: aim.ipynb  aim.py
tutorial/2_DMFT/: README  calc.py  dmft.py  hubbard.py  solution.h5
(+8 files in other folders)
